hphp/hack/test/typecheck/stdclass_final.php.exp
File "stdclass_final.php", line 3, characters 7-18:
You cannot extend a class declared as final (Typing[4035])
