hphp/hack/test/typecheck/stdclass_final.php
<?hh

class ThisAintJava extends stdClass {}
